--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -164,6 +164,11 @@ body {
 	user-select: none;
 }
 
+.volumeContainer {
+	position: relative;
+	left: 200px;
+}
+
 .skipPrompt {
 	font-size: 16px;
 	font-style: italic;
