--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -79,8 +79,8 @@ body {
 }
 
 .largeWideBookpageContainer {
-	width: 45%;
-	height: 70%;
+	width: 45vw;
+	height: 70vh;
 	background-color: white;
 	border-radius: 5px;
 	text-align: center;
@@ -88,8 +88,8 @@ body {
 }
 
 .disabledLargeWideBookpageContainer {
-	width: 80%;
-	height: 70%;
+	width: 45vw;
+	height: 70vh;
 	background-color: white;
 	border-radius: 5px;
 	text-align: center;
@@ -104,7 +104,7 @@ body {
 
 .buttonContainer {
 	display: block;
-	margin-top: 65%;
+	margin-top: 36%;
 }
 
 .routeTransition,
