--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -67,6 +67,8 @@ body {
 .bookpageContainer {
 	width: 31.5vw;
 	height: 75vh;
+	min-width: 405px;
+	min-height: 522px;
 	background-color: white;
 	border-radius: 5px;
 }
@@ -74,6 +76,8 @@ body {
 .disabledBookpageContainer {
 	width: 31.5vw;
 	height: 75vh;
+	min-width: 405px;
+	min-height: 522px;
 	background-color: white;
 	border-radius: 5px;
 	opacity: 0.5;
@@ -92,6 +96,9 @@ body {
 .largeWideBookpageContainer {
 	width: 45vw;
 	height: 70vh;
+	min-width: 572px;
+	min-height: 490px;
+
 	background-color: white;
 	border-radius: 5px;
 	text-align: center;
@@ -110,6 +117,10 @@ body {
 .disabledLargeWideBookpageContainer {
 	width: 45vw;
 	height: 70vh;
+
+	min-width: 572px;
+	min-height: 490px;
+
 	background-color: white;
 	border-radius: 5px;
 	text-align: center;
