--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -25,6 +25,22 @@ body {
 	overflow-y: hidden;
 }
 
+.spellingContentContainer {
+	display: flex;
+	width: 100%;
+	/*height: 100%;*/
+	flex: 1;
+	background-color: #0c1f2c;
+	z-index: 1;
+	justify-content: flex-end;
+	align-items: center;
+	overflow-y: hidden;
+}
+
+.styles.centeredDiv {
+	margin: 0px auto;
+}
+
 .leftButtonContainer {
 	min-width: 200px;
 	/*width: 200px;
@@ -60,7 +76,7 @@ body {
 .spellingRightButtonContainer {
 	min-width: 200px;
 	margin: 30px;
-	margin-top: -4%;
+	margin-top: -18vh;
 	margin-bottom: 0px;
 }
 
