--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -32,7 +32,7 @@ body {
 	flex: 1;
 	background-color: #0c1f2c;
 	z-index: 1;
-	justify-content: flex-end;
+	justify-content: center;
 	align-items: center;
 	overflow-y: hidden;
 }
