--- a/client/src/GraderInterface/styles.css
+++ b/client/src/GraderInterface/styles.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 }
 
 .waitingInfoHeader {
@@ -10,11 +10,11 @@ body {
 }
 
 .waitingInfoSubHeader {
-    color: #4a4a4a;
-    text-align: center;
-    position: relative;
-    top: 32vh;
-    font-weight: 100;
+	color: #4a4a4a;
+	text-align: center;
+	position: relative;
+	top: 32vh;
+	font-weight: 100;
 }
 
 .graderContainer {
@@ -40,7 +40,6 @@ body {
 	display: inline-block;
 	margin-bottom: 35px;
 	margin-right: 30px;
-
 }
 
 .block {
@@ -56,13 +55,12 @@ body {
 	margin-bottom: 40px;
 }
 
-
 .remoteContainer {
 	margin-top: 100px;
 }
 
 .nameHeading {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-weight: bold;
 	font-size: 1.9em;
 }
@@ -71,23 +69,21 @@ body {
 	font-style: italic;
 	font-size: 1.1em;
 	margin-top: 5px;
-
 }
 
 .audioElement {
 	width: 325px;
 	margin-top: 20px;
 	margin-right: 4px;
-	display: block
+	display: block;
 }
 
 .markupContainer {
 	margin-top: 40px;
 }
 
-
 .bookTitleHeading {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-weight: bold;
 	font-size: 1.5em;
 }
@@ -111,16 +107,16 @@ body {
 .promptButtonGroup {
 	margin-top: 5px;
 	margin-bottom: 0px;
+	max-width: 600px;
 }
 
 .promptButtonGroup a {
-	    font-size: .9em;
+	font-size: 0.9em;
 }
 
 .tallTextArea {
 	height: 100px;
 }
-
 
 .submitButton {
 	width: 120px;
@@ -133,10 +129,10 @@ body {
 
 .alertSuccess {
 	position: fixed;
-    top: 59px;
-    right: 0px;
-    width: 100%;
-    text-align: center;
+	top: 59px;
+	right: 0px;
+	width: 100%;
+	text-align: center;
 }
 
 .questionIcon {
@@ -147,9 +143,3 @@ body {
 	max-width: 650px;
 	height: 100px !important;
 }
-
-
-
-
-
-
